Western Blotting Quantification with Python

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -36,6 +36,30 @@
     "    \"\"\"\n",
     "    return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(img))))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def thresh_img(grey_img):\n",
+    "    \"\"\"\n",
+    "    Takes an grey scale image, returns threshold image with Otsu algorithm.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    grey_img: the grey scale image of western blot provided by gray_img function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    Thresholded image from the grey scale image provided.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    segmented = grey_img < threshold_otsu(grey_img)\n",
+    "    return segmented"
+   ]
   }
  ],
  "metadata": {
