Western Blotting Quantification with Python

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -60,6 +60,29 @@
     "    segmented = grey_img < threshold_otsu(grey_img)\n",
     "    return segmented"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def band_labeling(original_img, threshold_img):\n",
+    "    \"\"\"\n",
+    "    Takes an gray scale image, labels all the objects in it.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    original_img: The raw form of western blot image provided by gray_img function\n",
+    "    threshold_img: Thresholded image provided by thresh_img function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    Thresholded image with all the objects labeled\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return measure.label(threshold_img, connectivity = original_img.ndim)"
+   ]
   }
  ],
  "metadata": {
