Western Blotting Quantification with Python

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "# Import the libraries\n",
     "\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from skimage import measure, io, img_as_ubyte\n",
@@ -34,7 +35,12 @@
     "    Same image in grey scale\n",
     "    \n",
     "    \"\"\"\n",
-    "    return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(img))))"
+    "    \n",
+    "    if img.split(\".\")[-1] == \"jpg\":\n",
+    "        return img_as_ubyte(rgb2gray(io.imread(img)))\n",
+    "    \n",
+    "    else:\n",
+    "        return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(img))))"
    ]
   },
   {
@@ -82,6 +88,34 @@
     "    \"\"\"\n",
     "    \n",
     "    return measure.label(threshold_img, connectivity = original_img.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def band_separation(threshold_img):\n",
+    "    \"\"\"\n",
+    "    Takes an thresholded image, finds the columns where each object is separated from the other.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    thresh_img: Thresholded image with all the objects in it labeled\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A tuple of integers\n",
+    "    Every two inegters are for one object. The image is read from left to right. \n",
+    "    The first integer is the first pixel of the object detected and the second one\n",
+    "    is the last pixel of the object detected.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    col_img = np.any(threshold_img, axis = 0)\n",
+    "    separated_obj = np.flatnonzero(np.diff(col_img))\n",
+    "    return separated_obj"
    ]
   }
  ],
