Western Blotting Quantification with Python

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -117,6 +117,54 @@
     "    separated_obj = np.flatnonzero(np.diff(col_img))\n",
     "    return separated_obj"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def band_measurement(original_img, labeled_img, band_location, conc):\n",
+    "    \"\"\"\n",
+    "    Calculates the are of each object in image from left to right,\n",
+    "    and saves it into a dictionary with corressponding does of the protein.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    original_img: The raw western blot image provided from gray_img function\n",
+    "    labeled_img: Thresholded image with labeled object provided from band_labeling function\n",
+    "    band_location: The tuple of integers provided from band_separation function\n",
+    "    conc: List of strings, for all the concentrations used in the wb. Since objects are\n",
+    "    read from left to right, the list's order should be from left to right too.\n",
+    "    \n",
+    "    Returns\n",
+    "    ---------\n",
+    "    A dictionary whose keys are the concentrations and values are the are of the band.\n",
+    "    \"\"\"\n",
+    "    measurements = {}\n",
+    "    start = 0\n",
+    "    end = 1\n",
+    "    \n",
+    "    for num in range(len(band_location) // 2):\n",
+    "        properties = measure.regionprops(labeled_img[:, band_location[start]: band_location[end]], \n",
+    "                                         original_img[:, band_location[start]: band_location[end]])\n",
+    "        \n",
+    "        if len(properties) == 0:\n",
+    "            raise Exception(\"No object detected! Check the image.\")\n",
+    "            \n",
+    "        elif len(properties) == 1:\n",
+    "            for ar in properties:\n",
+    "                measurements[conc[num]] = ar.area\n",
+    "                \n",
+    "        else:\n",
+    "            final = max([ar.area for ar in properties])\n",
+    "            measurements[conc[num]] = final\n",
+    "            \n",
+    "        start += 2\n",
+    "        end += 2\n",
+    "       \n",
+    "    return measurements"
+   ]
   }
  ],
  "metadata": {
