Western Blotting Quantification with Python

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -165,6 +165,29 @@
     "       \n",
     "    return measurements"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def total_measurement(control, other):\n",
+    "    \"\"\"\n",
+    "    Takes band measurements of an antibody and its control, divides each bands area to its corresponding control area\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    control: Dictionary from band_measurement function\n",
+    "    other: Dictionary from band_measurement function\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A dictionary whose keys are the concentration and values are other - control\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return {pair[0]: int(pair[1]) / int(pair[2]) for pair in zip(other.keys(), other.values(), control.values())}"
+   ]
   }
  ],
  "metadata": {
