Western Blotting Quantification with Python (Functional)

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -188,6 +188,35 @@
     "    \n",
     "    return {pair[0]: int(pair[1]) / int(pair[2]) for pair in zip(other.keys(), other.values(), control.values())}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wb_graph(measurement, title, x_label, y_label, img_name):\n",
+    "    \"\"\"\n",
+    "    Creates and saves graphs based on the info from band_measurement function\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    measurement: Dictionary from band_measurement function\n",
+    "    title: String, which will be the title of the grapgh\n",
+    "    img_name: String, which will be the name of the graph saved in the dorectory.\n",
+    "              The defualt format is png.\n",
+    "              \n",
+    "    Returns\n",
+    "    ---------\n",
+    "    A grapgh saved in the directory\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize = (10, 7))\n",
+    "    plt.bar(measurement.keys(), measurement.values())             \n",
+    "    plt.xlabel(x_label)\n",
+    "    plt.ylabel(y_label)\n",
+    "    plt.title(title) \n",
+    "    plt.savefig(img_name)"
+   ]
   }
  ],
  "metadata": {
