Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -15,6 +15,23 @@
     "from skimage.color import rgb2gray, rgba2rgb\n",
     "from skimage.filters import threshold_otsu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WesternBlotQuantification():\n",
+    "    \n",
+    "    CONTROL = {}\n",
+    "    EXPERIMENTAL = {}\n",
+    "    \n",
+    "    def __init__(self, conc, blot_img, control = False):\n",
+    "        self.conc = conc\n",
+    "        self.blot_img = blot_img\n",
+    "        self.control = control"
+   ]
   }
  ],
  "metadata": {
