Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -30,7 +30,10 @@
     "    def __init__(self, conc, blot_img, control = False):\n",
     "        self.conc = conc\n",
     "        self.blot_img = blot_img\n",
-    "        self.control = control"
+    "        self.control = control\n",
+    "        \n",
+    "    def read_gray(self):\n",
+    "        return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(self.blot_img))))"
    ]
   }
  ],
