Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -33,7 +33,11 @@
     "        self.control = control\n",
     "        \n",
     "    def read_gray(self):\n",
-    "        return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(self.blot_img))))"
+    "        return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(self.blot_img))))\n",
+    "    \n",
+    "    def show_gray(self):\n",
+    "        plt.imshow(self.read_gray())\n",
+    "        plt.show()"
    ]
   }
  ],
