Western Blotting Quantification with Python (Functional)

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -217,6 +217,56 @@
     "    plt.title(title) \n",
     "    plt.savefig(img_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_blots(pathway_name, concs):\n",
+    "    \"\"\"\n",
+    "    Calculates the bands for multiple blots from multiple images.\n",
+    "    \n",
+    "    Paramters\n",
+    "    ---------\n",
+    "    pathway_name: Name of the pathway (the antibody) used. It is assumed that\n",
+    "    each image name after the pathway looked into. Giving example, if working with\n",
+    "    Phospho-VASP, then the image should be named after it like pvasp.format. For \n",
+    "    multiple images, pvasp1.format, pvasp2.format and so on is desired.\n",
+    "    concs: List of concentrations of the objects in the blot from left to right.\n",
+    "    \n",
+    "    Returns\n",
+    "    ---------\n",
+    "    A dictionary whose keys are the concentrations, from concs list, and values are a list from the measured \n",
+    "    objects from the blots. \n",
+    "    \"\"\"\n",
+    "    total_results = []\n",
+    "    mid_result = []\n",
+    "    \n",
+    "    for item in os.listdir():\n",
+    "        if pathway_name.lower() in item.lower():\n",
+    "            \n",
+    "            result = band_measurement(gray_img(item), band_labeling(gray_img(item), thresh_img(gray_img(item))), \n",
+    "                             band_separation(thresh_img(gray_img(item))), concs)\n",
+    "            \n",
+    "            total_results.append(result)\n",
+    "            \n",
+    "        else:\n",
+    "            continue\n",
+    "            \n",
+    "    \n",
+    "    for item in total_results:\n",
+    "        if len(mid_result) == 0:\n",
+    "            mid_result.append([*item.keys()])\n",
+    "            mid_result.append([*item.values()])\n",
+    "\n",
+    "        else:\n",
+    "            mid_result.append([*item.values()])\n",
+    "        \n",
+    "    final = {x[0]: np.array([*x[1:]]) for x in list(zip(*mid_result))}\n",
+    "    return final"
+   ]
   }
  ],
  "metadata": {
