Western Blotting Quantification with Python (Functional)

--- a/Western Blot/WB_Functional.ipynb
+++ b/Western Blot/WB_Functional.ipynb
@@ -267,6 +267,43 @@
     "    final = {x[0]: np.array([*x[1:]]) for x in list(zip(*mid_result))}\n",
     "    return final"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_bars(mult_measures, title, file_name):\n",
+    "    \"\"\"\n",
+    "    Creates a multiple bar grapgh from a dictionary\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    mult_measures: A dictionary provided by multiple_blots function.\n",
+    "    title: str, will be used as the title of the bar graph.\n",
+    "    file_name: str, will be used to save the bar in the directory. \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    final = [[x[y] for x in [*mult_measures.values()]] for y in range(len([*mult_measures.values()][0]))]\n",
+    "    w = 0.3\n",
+    "    bar0 = np.arange(len(final[0]))\n",
+    "    bar1 = np.arange(len(final[0]))\n",
+    "    \n",
+    "    for items in range(len(final)):\n",
+    "    \n",
+    "        plt.bar(bar1, final[items], w, label = \"Set \" + str(items),\n",
+    "               yerr = np.std(final[items]), ecolor = 'black', capsize = 5)\n",
+    "        bar1 = [i + w for i in bar1]\n",
+    "\n",
+    "\n",
+    "    plt.xlabel(\"Concentrations\")\n",
+    "    plt.ylabel(\"Quantifications\")\n",
+    "    plt.xticks(bar0 + w / 2, test.keys())\n",
+    "    plt.legend(loc = \"upper right\", bbox_to_anchor = (1.21, 1.02))\n",
+    "    plt.title(title)\n",
+    "    plt.savefig(file_name)"
+   ]
   }
  ],
  "metadata": {
