Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -27,15 +27,31 @@
     "    CONTROL = {}\n",
     "    EXPERIMENTAL = {}\n",
     "    \n",
-    "    def __init__(self, conc, blot_img, control = False):\n",
+    "    def __init__(self, conc, blot_img, control = None):\n",
+    "        \"\"\"\n",
+    "        concs: List, a list of concentrations (or different timing) used in the experiment.\n",
+    "        blot_img: Image of the blot.\n",
+    "        control: Image of a blot for normalazation. It could be GAPDH or B Actin or something else.\n",
+    "        If total measurements are not required, do not add it. By defautl, its value is none.\n",
+    "        \"\"\"\n",
     "        self.conc = conc\n",
     "        self.blot_img = blot_img\n",
     "        self.control = control\n",
     "        \n",
     "    def read_gray(self):\n",
-    "        return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(self.blot_img))))\n",
+    "        \"\"\"\n",
+    "        Reads the blot image as grey.\n",
+    "        \"\"\"\n",
+    "        if self.blot_img.split(\".\")[-1] == \"jpg\":\n",
+    "            return img_as_ubyte(rgb2gray(io.imread(self.blot_img)))\n",
+    "    \n",
+    "        else:\n",
+    "            return img_as_ubyte(rgb2gray(rgba2rgb(io.imread(self.blot_img))))\n",
     "    \n",
     "    def show_gray(self):\n",
+    "        \"\"\"\n",
+    "        Displays the blot image in grey format.\n",
+    "        \"\"\"\n",
     "        plt.imshow(self.read_gray())\n",
     "        plt.show()"
    ]
