--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -53,7 +53,14 @@
     "        Displays the blot image in grey format.\n",
     "        \"\"\"\n",
     "        plt.imshow(self.read_gray())\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "        \n",
+    "    def thresh_img(self):\n",
+    "        \"\"\"\n",
+    "        Thresholds the grey image with threshod otsu algorithm.\n",
+    "        \"\"\"\n",
+    "        segmented = self.read_gray() < threshold_otsu(self.read_gray())\n",
+    "        return segmented"
    ]
   }
  ],
