Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -60,7 +60,14 @@
     "        Thresholds the grey image with threshod otsu algorithm.\n",
     "        \"\"\"\n",
     "        segmented = self.read_gray() < threshold_otsu(self.read_gray())\n",
-    "        return segmented"
+    "        return segmented\n",
+    "    \n",
+    "    def show_thresh_img(self):\n",
+    "        \"\"\"\n",
+    "        Displays the thresholded image.\n",
+    "        \"\"\"\n",
+    "        plt.imshow(self.thresh_img())\n",
+    "        plt.show()"
    ]
   }
  ],
