Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -67,7 +67,13 @@
     "        Displays the thresholded image.\n",
     "        \"\"\"\n",
     "        plt.imshow(self.thresh_img())\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "        \n",
+    "    def band_labeling(self):\n",
+    "        \"\"\"\n",
+    "        Labels the objects in the image.\n",
+    "        \"\"\"\n",
+    "        return measure.label(self.thresh_img(), connectivity = self.read_gray().ndim) "
    ]
   }
  ],
