Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -73,7 +73,14 @@
     "        \"\"\"\n",
     "        Labels the objects in the image.\n",
     "        \"\"\"\n",
-    "        return measure.label(self.thresh_img(), connectivity = self.read_gray().ndim) "
+    "        return measure.label(self.thresh_img(), connectivity = self.read_gray().ndim) \n",
+    "    \n",
+    "    def show_labeled(self):\n",
+    "        \"\"\"\n",
+    "        Displays the labeled image.\n",
+    "        \"\"\"\n",
+    "        plt.imshow(self.band_labeling())\n",
+    "        plt.show()"
    ]
   }
  ],
