Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -80,7 +80,15 @@
     "        Displays the labeled image.\n",
     "        \"\"\"\n",
     "        plt.imshow(self.band_labeling())\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "        \n",
+    "    def band_separation(self):\n",
+    "        \"\"\"\n",
+    "        Isolates the objects in the image.\n",
+    "        \"\"\"\n",
+    "        col_img = np.any(self.thresh_img(), axis = 0)\n",
+    "        separated_obj = np.flatnonzero(np.diff(col_img))\n",
+    "        return separated_obj"
    ]
   }
  ],
