Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -88,7 +88,49 @@
     "        \"\"\"\n",
     "        col_img = np.any(self.thresh_img(), axis = 0)\n",
     "        separated_obj = np.flatnonzero(np.diff(col_img))\n",
-    "        return separated_obj"
+    "        return separated_obj\n",
+    "    \n",
+    "    def band_measurement(self):\n",
+    "        \"\"\"\n",
+    "        Measure the area of each object in the image.\n",
+    "        \"\"\"\n",
+    "        start = 0\n",
+    "        end = 1\n",
+    "        band_location = self.band_separation()\n",
+    "        original_img = self.read_gray()\n",
+    "        labeled_img = self.band_labeling()\n",
+    "        \n",
+    "        for num in range(len(band_location) // 2):\n",
+    "            properties = measure.regionprops(labeled_img[:, band_location[start]: band_location[end]], \n",
+    "                                             original_img[:, band_location[start]: band_location[end]])\n",
+    "\n",
+    "            if len(properties) == 0:\n",
+    "                raise Exception(\"No object detected! Check the image.\")\n",
+    "\n",
+    "            elif len(properties) == 1:\n",
+    "                for ar in properties:\n",
+    "                    if self.control == None:\n",
+    "                        WesternBlotQuantification.EXPERIMENTAL[self.conc[num]] = ar.area\n",
+    "                        \n",
+    "                    else:\n",
+    "                        WesternBlotQuantification.CONTROL[self.conc[num]] = ar.area\n",
+    "\n",
+    "            else:\n",
+    "                final = max([ar.area for ar in properties])\n",
+    "                if self.control == None:\n",
+    "                    WesternBlotQuantification.EXPERIMENTAL[self.conc[num]] = final\n",
+    "                        \n",
+    "                else:\n",
+    "                    WesternBlotQuantification.CONTROL[self.conc[num]] = final\n",
+    "\n",
+    "            start += 2\n",
+    "            end += 2\n",
+    "            \n",
+    "        if self.control == None:\n",
+    "            return WesternBlotQuantification.EXPERIMENTAL\n",
+    "        \n",
+    "        else:\n",
+    "            return WesternBlotQuantification.CONTROL"
    ]
   }
  ],
