Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -130,7 +130,16 @@
     "            return WesternBlotQuantification.EXPERIMENTAL\n",
     "        \n",
     "        else:\n",
-    "            return WesternBlotQuantification.CONTROL"
+    "            return WesternBlotQuantification.CONTROL\n",
+    "        \n",
+    "    def total_measurement(self):\n",
+    "        \"\"\"\n",
+    "        Takes band measurements of an antibody and its control, divides each bands area to its corresponding control area\n",
+    "        \"\"\"\n",
+    "    \n",
+    "        return {pair[0]: int(pair[1]) / int(pair[2]) for pair in zip(WesternBlotQuantification.EXPERIMENTAL.keys(), \n",
+    "                                                                     WesternBlotQuantification.EXPERIMENTAL.values(), \n",
+    "                                                                     WesternBlotQuantification.CONTROL.values())}"
    ]
   }
  ],
