Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -139,7 +139,33 @@
     "    \n",
     "        return {pair[0]: int(pair[1]) / int(pair[2]) for pair in zip(WesternBlotQuantification.EXPERIMENTAL.keys(), \n",
     "                                                                     WesternBlotQuantification.EXPERIMENTAL.values(), \n",
-    "                                                                     WesternBlotQuantification.CONTROL.values())}"
+    "                                                                     WesternBlotQuantification.CONTROL.values())}\n",
+    "    \n",
+    "    def wb_graph(self, title, x_label, y_label, img_name, display = False):\n",
+    "    \"\"\"\n",
+    "    Creates and saves graphs based on the info from band_measurement function.\n",
+    "    \"\"\"\n",
+    "        self.title = title\n",
+    "        self.x_label = x_label\n",
+    "        self.y_label = y_label\n",
+    "        self.img_name = img_name\n",
+    "        self.display = display\n",
+    "        \n",
+    "        if self.display == False:\n",
+    "            plt.figure(figsize = (10, 7))\n",
+    "            plt.bar(WesternBlotQuantification.EXPERIMENTAL.keys(), WesternBlotQuantification.EXPERIMENTAL.values())             \n",
+    "            plt.xlabel(self.x_label)\n",
+    "            plt.ylabel(self.y_label)\n",
+    "            plt.title(self.title) \n",
+    "            plt.savefig(self.img_name)\n",
+    "            \n",
+    "        else:\n",
+    "            plt.figure(figsize = (10, 7))\n",
+    "            plt.bar(WesternBlotQuantification.EXPERIMENTAL.keys(), WesternBlotQuantification.EXPERIMENTAL.values())             \n",
+    "            plt.xlabel(self.x_label)\n",
+    "            plt.ylabel(self.y_label)\n",
+    "            plt.title(self.title) \n",
+    "            plt.show()"
    ]
   }
  ],
