Western Blotting Quantification with Python (OOP)

--- a/Western Blot/WB_OOP.ipynb
+++ b/Western Blot/WB_OOP.ipynb
@@ -165,6 +165,32 @@
     "            plt.xlabel(self.x_label)\n",
     "            plt.ylabel(self.y_label)\n",
     "            plt.title(self.title) \n",
+    "            plt.show()\n",
+    "            \n",
+    "    def total_wb_graph(self, title, x_label, y_label, img_name, display = False):\n",
+    "        \"\"\"\n",
+    "        Creates and saves graphs based on the info from total_measurement function.\n",
+    "        \"\"\"\n",
+    "        self.title = title\n",
+    "        self.x_label = x_label\n",
+    "        self.y_label = y_label\n",
+    "        self.img_name = img_name\n",
+    "        self.display = display\n",
+    "        \n",
+    "        if self.display == False:\n",
+    "            plt.figure(figsize = (10, 7))\n",
+    "            plt.bar(self.total_measurement.keys(), self.total_measurement.values())             \n",
+    "            plt.xlabel(self.x_label)\n",
+    "            plt.ylabel(self.y_label)\n",
+    "            plt.title(self.title) \n",
+    "            plt.savefig(self.img_name)\n",
+    "            \n",
+    "        else:\n",
+    "            plt.figure(figsize = (10, 7))\n",
+    "            plt.bar(self.total_measurement.keys(), self.total_measurement.values())             \n",
+    "            plt.xlabel(self.x_label)\n",
+    "            plt.ylabel(self.y_label)\n",
+    "            plt.title(self.title) \n",
     "            plt.show()"
    ]
   }
