Script Written for Microscopy Image Processing with Python

--- a/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
@@ -89,6 +89,48 @@
     "        cv2.imwrite(new_path, final)\n",
     "        counter += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Second Method for All Images (Fast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contrast(raw_img_directory, contrast_img_directory):\n",
+    "    \"\"\"\n",
+    "    Reads images from any folder and saves the contrasted ones in a another folder.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    raw_img_directory: Address of the raw images with '/' in the end.\n",
+    "    contrast_img_directory: Adrress of the folder where new images will be saved with _Contrast prefix. \n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    Contrasted images\n",
+    "    \"\"\"\n",
+    "    path = raw_img_directory + \"/*.*\"\n",
+    "    dye = raw_img_directory.split(\"/\")[0]\n",
+    "    counter = 0\n",
+    "    \n",
+    "    for image in glob.glob(path):\n",
+    "        img = cv2.imread(image, 1)\n",
+    "        lab = cv2.cvtColor(img, cv2.COLOR_BGR2LAB)\n",
+    "        B, G, R = cv2.split(lab)\n",
+    "        clahe = cv2.createCLAHE(clipLimit=3.0, tileGridSize=(8,8))\n",
+    "        cl = clahe.apply(B)\n",
+    "        final = cv2.cvtColor(cv2.merge((cl, G, R)), cv2.COLOR_LAB2BGR)\n",
+    "        new_path = contrast_img_directory + \"/\" + os.listdir(dye)[counter]\n",
+    "        cv2.imwrite(new_path, final)\n",
+    "        counter += 1"
+   ]
   }
  ],
  "metadata": {
