Script Written for Microscopy Image Processing with Python

--- a/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
@@ -131,6 +131,99 @@
     "        cv2.imwrite(new_path, final)\n",
     "        counter += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(merging, dapi = \"\", texasred = \"\", fitc = \"\"):\n",
+    "    \"\"\"\n",
+    "    Accepts at least two different sets of images and merge them in different color channels.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    merging: str, The possible combinations are:\n",
+    "            b = blue for DAPI\n",
+    "            r = red for texasred\n",
+    "            g = green for fitc\n",
+    "    \n",
+    "            B_G_merged = blue + green\n",
+    "            B_R_merged = blue + red\n",
+    "            R_G_merged = red + green\n",
+    "            R_G_B_merged = red + blue + green\n",
+    "            \n",
+    "    dapi: str, the directory of the dapi_constrast images with '/' in the end.\n",
+    "    texasred: str, the directory of the texasred_constrast images with '/' in the end.\n",
+    "    fitc: str, the directory of the fitc_constrast images with '/' in the end.\n",
+    "    \n",
+    "    Returns\n",
+    "    ----------\n",
+    "    A folder containing merged images.\n",
+    "    \"\"\"\n",
+    "    dapi_path = dapi + \"/*.*\"\n",
+    "    fitc_path = fitc + \"/*.*\"\n",
+    "    texas_path = texasred + \"/*.*\"\n",
+    "    \n",
+    "    try:\n",
+    "\n",
+    "        if merging.lower().strip() == \"b_g_merged\":\n",
+    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
+    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
+    "            texase = np.zeros_like(dapi[0])\n",
+    "            new_path = \"B_G_Merged\"\n",
+    "            os.mkdir(new_path)\n",
+    "\n",
+    "            for num in range(0, len(dapi)):\n",
+    "                merged = cv2.merge((dapi[num], fitc[num], texas))\n",
+    "                cv2.imwrite(new_path + \"/\" + \"Merged_\" + str(num) + \".tif\", merged)\n",
+    "\n",
+    "\n",
+    "        elif merging.lower().strip() == \"b_r_merged\":\n",
+    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
+    "            fitc = np.zeros_like(dapi[0]) \n",
+    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            new_path = \"B_R_Merged\"\n",
+    "            os.mkdir(new_path)\n",
+    "\n",
+    "            for num in range(0, len(dapi)):\n",
+    "                merged = cv2.merge((dapi[num], fitc, texas[num]))\n",
+    "                cv2.imwrite(new_path + \"/\" + \"Merged_\" + str(num) + \".tif\", merged)\n",
+    "\n",
+    "        elif merging.lower().strip() == \"r_g_merged\":\n",
+    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
+    "            dapi = np.zeros_like(fitc[0])\n",
+    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            new_path = \"R_G_Merged\"\n",
+    "            os.mkdir(new_path)\n",
+    "\n",
+    "            for num in range(0, len(fitc)):\n",
+    "                merged = cv2.merge((dapi, fitc[num], texas[num]))\n",
+    "                cv2.imwrite(new_path + \"/\" + \"Merged_\" + str(num) + \".tif\", merged)\n",
+    "\n",
+    "\n",
+    "        elif merging.lower().strip() == \"r_g_b_merged\":\n",
+    "            dapi = [cv2.imread(img, 0) for img in glob.glob(dapi_path)]\n",
+    "            fitc = [cv2.imread(img, 0) for img in glob.glob(fitc_path)]\n",
+    "            texas = [cv2.imread(img, 0) for img in glob.glob(texas_path)]\n",
+    "            new_path = \"R_G_B_Merged\"\n",
+    "            os.mkdir(new_path)\n",
+    "\n",
+    "            for num in range(0, len(dapi)):\n",
+    "                merged = cv2.merge((dapi[num], fitc[num], texas[num]))\n",
+    "                cv2.imwrite(new_path + \"/\" + \"Merged_\" + str(num) + \".tif\", merged)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            print(\"This combination does not exist.\")\n",
+    "            print(\"Run the program again and choose one among the available option.\")\n",
+    "\n",
+    "    except IndexError:\n",
+    "        print(\"One of the image folders does not exist.\")\n",
+    "        print(\"Please check and run the program again.\")\n",
+    "        print(\"Please this time choose your option carefully.\")"
+   ]
   }
  ],
  "metadata": {
