Isolation Forrest Algorithm for One Class Image Classification with Python

--- a/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/OneClassModel.ipynb
@@ -66,6 +66,50 @@
     "    colored_imgs = [cv2.cvtColor(cv2.imread(img), cv2.COLOR_BGR2HSV) for img in glob.glob(final_path)]\n",
     "    return np.array(list(map(normalize_img, colored_imgs)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = IsolationForest(n_estimators = 100, contamination = 0.01,\n",
+    "                       random_state = 42)\n",
+    "\n",
+    "model.fit(dataset_preparation(path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_file = open(\"OneClassIF.pkl\", \"wb\")\n",
+    "pickle.dump(model, model_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = {}\n",
+    "\n",
+    "for _ in glob.glob(\"Testing/*.*\"):\n",
+    "    features = normalize_img(cv2.cvtColor(cv2.imread(_), cv2.COLOR_BGR2HSV))\n",
+    "    result[_.split(\"\\\\\")[-1]] = model.predict([features])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.Series(result).to_excel(\"Testing_Results.xlsx\")"
+   ]
   }
  ],
  "metadata": {
