--- a/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
+++ b/IN Cell Analyzer 2200 Image Processing/Python/ImageProcessing.ipynb
@@ -67,7 +67,7 @@
     "    Parameters\n",
     "    ----------\n",
     "    raw_img_directory: Address of the raw DAPI images with '/' in the end.\n",
-    "    contrast_img_directory: Adrress of the folder where new images will be saved with _Contrast prefix. \n",
+    "    contrast_img_directory: Adrress of the folder where new images will be saved with _Contrast suffix. \n",
     "    \n",
     "    Returns\n",
     "    ----------\n",
