--- a/Phosphoproteomics/VolcanoPlot&Clustering.ipynb
+++ b/Phosphoproteomics/VolcanoPlot&Clustering.ipynb
@@ -24,6 +24,18 @@
     "from plotly import figure_factory"
    ]
   }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb94388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the libraries\n",
+    "\n",
+    "podo_data = pd.read_excel("C4C3-Podo-NewHeader.xlsx", header = [0, 1, 2])"
+  
  ],
  "metadata": {
   "kernelspec": {
