--- a/Phosphoproteomics/Volcano&Clustering.ipynb
+++ b/Phosphoproteomics/Volcano&Clustering.ipynb
@@ -126,7 +126,7 @@
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    data: Pandas datframe prepared by volcano_dataset_prep\n",
+    "    data: Pandas dataframe prepared by volcano_dataset_prep\n",
     "    \n",
     "    Returns\n",
     "    ----------\n",
